# camp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  LLVM_LICENSE  README.md  appveyor.yml  azure-pipelines.yml  conc-lambda.cpp  config.hpp.in
cmake/: FindSphinx.cmake  campConfig.cmake.in  load_blt.cmake
docs/: CMakeLists.txt  conf.py  index.rst  requirements.txt
docs/doxygen/: CMakeLists.txt  Doxyfile  Doxyfile.in
docs/sphinx/: camp_license.rst
docs/sphinx/dev_guide/: index.rst
docs/sphinx/user_guide/: features.rst  getting_started.rst  index.rst  using_camp.rst
docs/sphinx/user_guide/feature/: array.rst  concepts.rst  list.rst  map.rst  number.rst  resource.rst  size.rst  tuple.rst
docs/sphinx/user_guide/feature/resource/: cuda.rst  hip.rst  host.rst  omp_target.rst  sycl.rst
include/camp/: array.hpp  camp.hpp  concepts.hpp  config.in.hpp  contexts.hpp  defines.hpp  defines.in.hpp  detector.hpp  device.hpp  devices.hpp  helpers.hpp  lambda.hpp  list.hpp  make_unique.hpp  map.hpp  messages.hpp  number.hpp  optional.hpp  resource.hpp  resources.hpp  size.hpp  tuple.hpp  type_traits.hpp  value.hpp
include/camp/concepts/: detect.hpp
include/camp/detail/: sfinae.hpp  test.hpp
include/camp/list/: at.hpp  find_if.hpp  list.hpp
include/camp/number/: if.hpp  int_seq.hpp  make_seq.hpp  number.hpp
include/camp/resource/: cuda.hpp  event.hpp  hip.hpp  host.hpp  omp_target.hpp  platform.hpp  stream.hpp  sycl.hpp
include/camp/tuple/: print_tuple.hpp
include/camp/type_traits/: detect.hpp  enable_if.hpp  is_convertible.hpp  is_same.hpp  iterator_from.hpp
include/camp/value/: eval.hpp
scripts/: gen-header-list.sh  get-deps.sh  get-llvm.sh  make_release_tarball.sh  travis_build_and_test.sh  update_copyright.sh
src/: errors.cpp
test/: CMakeLists.txt  Test.hpp  accumulate.cpp  array.cpp  at_key.cpp  convertible.cpp  detect.cpp  device.cpp  errors.cpp  filter.cpp  find_if.cpp  flatten.cpp  index_of.cpp  lambda.cpp  messages.cpp  number.cpp  optional.cpp  resource.cpp  size.cpp  transform.cpp  tuple.cpp
